fixed text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ body {
   height: 100%;
   margin: 0;
   background: #fcfcfc;
+  text-align: justify;
 }
 
 .grid-3 {
