--- a/sass/partials/_shame.scss
+++ b/sass/partials/_shame.scss
@@ -6,6 +6,7 @@ body{
 	height: 100%;
 	margin: 0;
 	background: #fcfcfc;
+	text-align: justify;
 }
 
 .grid-3{
